snapshots/DeepSpeech/native_client/tfmodelstate.cc.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 264
kind: unit
spaces:
  - name: "TFModelState::TFModelState"
    start_line: 8
    end_line: 13
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 5
        total_operators: 9
        unique_operands: 5
        total_operands: 6
        length: 15
        estimated_program_length: 23.219
        purity_ratio: 1.548
        vocabulary: 10
        volume: 49.829
        difficulty: 3
        level: 0.333
        effort: 149.487
        time: 8.305
        bugs: 0.009
      loc:
        sloc: 6
        ploc: 6
        lloc: 0
        cloc: 0
        blank: 0
        sloc_average: 6
        ploc_average: 6
        lloc_average: 0
        cloc_average: 0
        blank_average: 0
        sloc_min: 6
        sloc_max: 6
        cloc_min: 0
        cloc_max: 0
        ploc_min: 6
        ploc_max: 6
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 21
        average: 21
        min: 21
        max: 21
      mi:
        original: 121.419
        sei: 99.571
        visual_studio: 71.005
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
  - name: "TFModelState::~TFModelState"
    start_line: 15
    end_line: 23
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 3
        value: 3
        average: 3
        min: 3
        max: 3
      cyclomatic:
        sum: 3
        value: 3
        average: 3
        min: 3
        max: 3
        modified:
          sum: 3
          value: 3
          average: 3
          min: 3
          max: 3
      halstead:
        unique_operators: 11
        total_operators: 23
        unique_operands: 9
        total_operands: 12
        length: 35
        estimated_program_length: 66.583
        purity_ratio: 1.902
        vocabulary: 20
        volume: 151.267
        difficulty: 7.333
        level: 0.136
        effort: 1109.295
        time: 61.627
        bugs: 0.036
      loc:
        sloc: 9
        ploc: 9
        lloc: 4
        cloc: 0
        blank: 0
        sloc_average: 9
        ploc_average: 9
        lloc_average: 4
        cloc_average: 0
        blank_average: 0
        sloc_min: 9
        sloc_max: 9
        cloc_min: 0
        cloc_max: 0
        ploc_min: 9
        ploc_max: 9
        lloc_min: 4
        lloc_max: 4
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 48
        average: 48
        min: 48
        max: 48
      mi:
        original: 108.616
        sei: 81.304
        visual_studio: 63.518
      abc:
        assignments: 1
        branches: 2
        conditions: 2
        magnitude: 3
        value: 3
        assignments_average: 1
        branches_average: 2
        conditions_average: 2
        assignments_min: 1
        assignments_max: 1
        branches_min: 2
        branches_max: 2
        conditions_min: 2
        conditions_max: 2
  - name: "TFModelState::init"
    start_line: 25
    end_line: 172
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 1
        closure_args: 0
        function_args_average: 1
        closure_args_average: 0
        total: 1
        value: 1
        average: 1
        function_args_min: 1
        function_args_max: 1
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 12
        average: 12
        min: 12
        max: 12
      cognitive:
        sum: 27
        value: 27
        average: 27
        min: 27
        max: 27
      cyclomatic:
        sum: 20
        value: 20
        average: 20
        min: 20
        max: 20
        modified:
          sum: 20
          value: 20
          average: 20
          min: 20
          max: 20
      halstead:
        unique_operators: 32
        total_operators: 498
        unique_operands: 125
        total_operands: 306
        length: 804
        estimated_program_length: 1030.723
        purity_ratio: 1.282
        vocabulary: 157
        volume: 5864.875
        difficulty: 39.168
        level: 0.026
        effort: 229715.427
        time: 12761.968
        bugs: 1.25
      loc:
        sloc: 148
        ploc: 131
        lloc: 84
        cloc: 0
        blank: 17
        sloc_average: 148
        ploc_average: 131
        lloc_average: 84
        cloc_average: 0
        blank_average: 17
        sloc_min: 148
        sloc_max: 148
        cloc_min: 0
        cloc_max: 0
        ploc_min: 131
        ploc_max: 131
        lloc_min: 84
        lloc_max: 84
        blank_min: 17
        blank_max: 17
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 1055
        average: 1055
        min: 1055
        max: 1055
      mi:
        original: 40.326
        sei: -15.486
        visual_studio: 23.583
      abc:
        assignments: 32
        branches: 83
        conditions: 29
        magnitude: 93.563
        value: 93.563
        assignments_average: 32
        branches_average: 83
        conditions_average: 29
        assignments_min: 32
        assignments_max: 32
        branches_min: 83
        branches_max: 83
        conditions_min: 29
        conditions_max: 29
  - name: tensor_from_vector
    start_line: 174
    end_line: 187
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 2
        closure_args: 0
        function_args_average: 2
        closure_args_average: 0
        total: 2
        value: 2
        average: 2
        function_args_min: 2
        function_args_max: 2
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 1
        average: 1
        min: 1
        max: 1
      cognitive:
        sum: 2
        value: 2
        average: 2
        min: 2
        max: 2
      cyclomatic:
        sum: 3
        value: 3
        average: 3
        min: 3
        max: 3
        modified:
          sum: 3
          value: 3
          average: 3
          min: 3
          max: 3
      halstead:
        unique_operators: 16
        total_operators: 47
        unique_operands: 15
        total_operands: 32
        length: 79
        estimated_program_length: 122.603
        purity_ratio: 1.552
        vocabulary: 31
        volume: 391.382
        difficulty: 17.067
        level: 0.059
        effort: 6679.578
        time: 371.088
        bugs: 0.118
      loc:
        sloc: 14
        ploc: 14
        lloc: 8
        cloc: 0
        blank: 0
        sloc_average: 14
        ploc_average: 14
        lloc_average: 8
        cloc_average: 0
        blank_average: 0
        sloc_min: 14
        sloc_max: 14
        cloc_min: 0
        cloc_max: 0
        ploc_min: 14
        ploc_max: 14
        lloc_min: 8
        lloc_max: 8
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 98
        average: 98
        min: 98
        max: 98
      mi:
        original: 96.515
        sei: 63.846
        visual_studio: 56.441
      abc:
        assignments: 6
        branches: 5
        conditions: 2
        magnitude: 8.062
        value: 8.062
        assignments_average: 6
        branches_average: 5
        conditions_average: 2
        assignments_min: 6
        assignments_max: 6
        branches_min: 5
        branches_max: 5
        conditions_min: 2
        conditions_max: 2
  - name: copy_tensor_to_vector
    start_line: 189
    end_line: 199
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 3
        closure_args: 0
        function_args_average: 3
        closure_args_average: 0
        total: 3
        value: 3
        average: 3
        function_args_min: 3
        function_args_max: 3
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 2
        value: 2
        average: 2
        min: 2
        max: 2
      cyclomatic:
        sum: 3
        value: 3
        average: 3
        min: 3
        max: 3
        modified:
          sum: 3
          value: 3
          average: 3
          min: 3
          max: 3
      halstead:
        unique_operators: 16
        total_operators: 40
        unique_operands: 13
        total_operands: 25
        length: 65
        estimated_program_length: 112.106
        purity_ratio: 1.725
        vocabulary: 29
        volume: 315.769
        difficulty: 15.385
        level: 0.065
        effort: 4857.981
        time: 269.888
        bugs: 0.096
      loc:
        sloc: 11
        ploc: 11
        lloc: 5
        cloc: 0
        blank: 0
        sloc_average: 11
        ploc_average: 11
        lloc_average: 5
        cloc_average: 0
        blank_average: 0
        sloc_min: 11
        sloc_max: 11
        cloc_min: 0
        cloc_max: 0
        ploc_min: 11
        ploc_max: 11
        lloc_min: 5
        lloc_max: 5
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 80
        average: 80
        min: 80
        max: 80
      mi:
        original: 101.538
        sei: 71.093
        visual_studio: 59.379
      abc:
        assignments: 4
        branches: 5
        conditions: 2
        magnitude: 6.708
        value: 6.708
        assignments_average: 4
        branches_average: 5
        conditions_average: 2
        assignments_min: 4
        assignments_max: 4
        branches_min: 5
        branches_max: 5
        conditions_min: 2
        conditions_max: 2
  - name: "TFModelState::infer"
    start_line: 201
    end_line: 245
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 7
        closure_args: 0
        function_args_average: 7
        closure_args_average: 0
        total: 7
        value: 7
        average: 7
        function_args_min: 7
        function_args_max: 7
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 1
        average: 1
        min: 1
        max: 1
      cognitive:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
      cyclomatic:
        sum: 2
        value: 2
        average: 2
        min: 2
        max: 2
        modified:
          sum: 2
          value: 2
          average: 2
          min: 2
          max: 2
      halstead:
        unique_operators: 23
        total_operators: 148
        unique_operands: 48
        total_operands: 101
        length: 249
        estimated_program_length: 372.12
        purity_ratio: 1.494
        vocabulary: 71
        volume: 1531.287
        difficulty: 24.198
        level: 0.041
        effort: 37053.956
        time: 2058.553
        bugs: 0.37
      loc:
        sloc: 45
        ploc: 38
        lloc: 18
        cloc: 1
        blank: 7
        sloc_average: 45
        ploc_average: 38
        lloc_average: 18
        cloc_average: 1
        blank_average: 7
        sloc_min: 45
        sloc_max: 45
        cloc_min: 1
        cloc_max: 1
        ploc_min: 38
        ploc_max: 38
        lloc_min: 18
        lloc_max: 18
        blank_min: 7
        blank_max: 7
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 324
        average: 324
        min: 324
        max: 324
      mi:
        original: 70.736
        sei: 63.524
        visual_studio: 41.366
      abc:
        assignments: 6
        branches: 19
        conditions: 1
        magnitude: 19.95
        value: 19.95
        assignments_average: 6
        branches_average: 19
        conditions_average: 1
        assignments_min: 6
        assignments_max: 6
        branches_min: 19
        branches_max: 19
        conditions_min: 1
        conditions_max: 1
  - name: "TFModelState::compute_mfcc"
    start_line: 247
    end_line: 264
    kind: function
    spaces: []
    metrics:
      nargs:
        function_args: 2
        closure_args: 0
        function_args_average: 2
        closure_args_average: 0
        total: 2
        value: 2
        average: 2
        function_args_min: 2
        function_args_max: 2
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 1
        average: 1
        min: 1
        max: 1
      cognitive:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
      cyclomatic:
        sum: 2
        value: 2
        average: 2
        min: 2
        max: 2
        modified:
          sum: 2
          value: 2
          average: 2
          min: 2
          max: 2
      halstead:
        unique_operators: 20
        total_operators: 61
        unique_operands: 28
        total_operands: 41
        length: 102
        estimated_program_length: 221.044
        purity_ratio: 2.167
        vocabulary: 48
        volume: 569.666
        difficulty: 14.643
        level: 0.068
        effort: 8341.54
        time: 463.419
        bugs: 0.137
      loc:
        sloc: 18
        ploc: 14
        lloc: 9
        cloc: 1
        blank: 3
        sloc_average: 18
        ploc_average: 14
        lloc_average: 9
        cloc_average: 1
        blank_average: 3
        sloc_min: 18
        sloc_max: 18
        cloc_min: 1
        cloc_max: 1
        ploc_min: 14
        ploc_max: 14
        lloc_min: 9
        lloc_max: 9
        blank_min: 3
        blank_max: 3
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 136
        average: 136
        min: 136
        max: 136
      mi:
        original: 90.722
        sei: 30.982
        visual_studio: 53.054
      abc:
        assignments: 3
        branches: 8
        conditions: 2
        magnitude: 8.775
        value: 8.775
        assignments_average: 3
        branches_average: 8
        conditions_average: 2
        assignments_min: 3
        assignments_max: 3
        branches_min: 8
        branches_max: 8
        conditions_min: 2
        conditions_max: 2
metrics:
  nargs:
    function_args: 15
    closure_args: 0
    function_args_average: 2.143
    closure_args_average: 0
    total: 15
    value: 0
    average: 2.143
    function_args_min: 0
    function_args_max: 7
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 15
    average: 2.143
    min: 0
    max: 12
  cognitive:
    sum: 36
    value: 0
    average: 5.143
    min: 0
    max: 27
  cyclomatic:
    sum: 35
    value: 1
    average: 5
    min: 1
    max: 20
    modified:
      sum: 35
      value: 1
      average: 5
      min: 1
      max: 20
  halstead:
    unique_operators: 41
    total_operators: 832
    unique_operands: 173
    total_operands: 527
    length: 1359
    estimated_program_length: 1505.85
    purity_ratio: 1.108
    vocabulary: 214
    volume: 10520.654
    difficulty: 62.448
    level: 0.016
    effort: 656993.535
    time: 36499.641
    bugs: 2.519
  loc:
    sloc: 264
    ploc: 227
    lloc: 128
    cloc: 2
    blank: 36
    sloc_average: 33
    ploc_average: 28.375
    lloc_average: 16
    cloc_average: 0.25
    blank_average: 4.5
    sloc_min: 6
    sloc_max: 264
    cloc_min: 0
    cloc_max: 2
    ploc_min: 6
    ploc_max: 227
    lloc_min: 0
    lloc_max: 128
    blank_min: 0
    blank_max: 36
  nom:
    functions: 7
    closures: 0
    functions_average: 0.875
    closures_average: 0
    total: 7
    average: 0.875
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 1779
    average: 222.375
    min: 17
    max: 1055
  mi:
    original: 24.462
    sei: 11.923
    visual_studio: 14.305
  abc:
    assignments: 52
    branches: 122
    conditions: 38
    magnitude: 137.957
    value: 0
    assignments_average: 6.5
    branches_average: 15.25
    conditions_average: 4.75
    assignments_min: 0
    assignments_max: 32
    branches_min: 0
    branches_max: 83
    conditions_min: 0
    conditions_max: 29
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
