snapshots/DeepSpeech/native_client/tfmodelstate.h.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 35
kind: unit
spaces:
  - name: TFModelState
    start_line: 12
    end_line: 33
    kind: struct
    spaces: []
    metrics:
      nargs:
        function_args: 0
        closure_args: 0
        function_args_average: 0
        closure_args_average: 0
        total: 0
        value: 0
        average: 0
        function_args_min: 0
        function_args_max: 0
        closure_args_min: 0
        closure_args_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        value: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        value: 1
        average: 1
        min: 1
        max: 1
        modified:
          sum: 1
          value: 1
          average: 1
          min: 1
          max: 1
      halstead:
        unique_operators: 16
        total_operators: 70
        unique_operands: 23
        total_operands: 33
        length: 103
        estimated_program_length: 168.042
        purity_ratio: 1.631
        vocabulary: 39
        volume: 544.396
        difficulty: 11.478
        level: 0.087
        effort: 6248.724
        time: 347.151
        bugs: 0.113
      loc:
        sloc: 22
        ploc: 18
        lloc: 2
        cloc: 0
        blank: 4
        sloc_average: 22
        ploc_average: 18
        lloc_average: 2
        cloc_average: 0
        blank_average: 4
        sloc_min: 22
        sloc_max: 22
        cloc_min: 0
        cloc_max: 0
        ploc_min: 18
        ploc_max: 18
        lloc_min: 2
        lloc_max: 2
        blank_min: 4
        blank_max: 4
      nom:
        functions: 0
        closures: 0
        functions_average: 0
        closures_average: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      tokens:
        tokens: 145
        average: 145
        min: 145
        max: 145
      mi:
        original: 87.937
        sei: 51.267
        visual_studio: 51.425
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        value: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
      wmc:
        class_wmc_sum: 0
        interface_wmc_sum: 0
        total: 0
      npm:
        class_npm_sum: 5
        interface_npm_sum: 0
        class_methods: 5
        interface_methods: 0
        class_coa: 1
        interface_coa: 0
        total: 5
        total_methods: 5
        coa: 1
      npa:
        class_npa_sum: 3
        interface_npa_sum: 0
        class_attributes: 3
        interface_attributes: 0
        class_cda: 1
        interface_cda: 0
        total: 3
        total_attributes: 3
        cda: 1
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 2
    value: 1
    average: 2
    min: 1
    max: 1
    modified:
      sum: 2
      value: 1
      average: 2
      min: 1
      max: 1
  halstead:
    unique_operators: 16
    total_operators: 71
    unique_operands: 28
    total_operands: 39
    length: 110
    estimated_program_length: 198.606
    purity_ratio: 1.806
    vocabulary: 44
    volume: 600.537
    difficulty: 11.143
    level: 0.09
    effort: 6691.703
    time: 371.761
    bugs: 0.118
  loc:
    sloc: 35
    ploc: 26
    lloc: 2
    cloc: 1
    blank: 9
    sloc_average: 17.5
    ploc_average: 13
    lloc_average: 1
    cloc_average: 0.5
    blank_average: 4.5
    sloc_min: 22
    sloc_max: 35
    cloc_min: 0
    cloc_max: 1
    ploc_min: 18
    ploc_max: 26
    lloc_min: 2
    lloc_max: 2
    blank_min: 4
    blank_max: 9
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 169
    average: 84.5
    min: 24
    max: 145
  mi:
    original: 79.675
    sei: 64.422
    visual_studio: 46.593
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 5
    interface_npm_sum: 0
    class_methods: 5
    interface_methods: 0
    class_coa: 1
    interface_coa: 0
    total: 5
    total_methods: 5
    coa: 1
  npa:
    class_npa_sum: 3
    interface_npa_sum: 0
    class_attributes: 3
    interface_attributes: 0
    class_cda: 1
    interface_cda: 0
    total: 3
    total_attributes: 3
    cda: 1
