snapshots/DeepSpeech/native_client/trie_load.cc.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 65
kind: unit
spaces:
  - name: main
    start_line: 16
    end_line: 65
    kind: function
    spaces:
      - name: state_info
        start_line: 39
        end_line: 42
        kind: struct
        spaces: []
        metrics:
          nargs:
            function_args: 0
            closure_args: 0
            function_args_average: 0
            closure_args_average: 0
            total: 0
            value: 0
            average: 0
            function_args_min: 0
            function_args_max: 0
            closure_args_min: 0
            closure_args_max: 0
          nexits:
            sum: 0
            average: 0
            min: 0
            max: 0
          cognitive:
            sum: 0
            value: 0
            average: 0
            min: 0
            max: 0
          cyclomatic:
            sum: 1
            value: 1
            average: 1
            min: 1
            max: 1
            modified:
              sum: 1
              value: 1
              average: 1
              min: 1
              max: 1
          halstead:
            unique_operators: 8
            total_operators: 18
            unique_operands: 6
            total_operands: 7
            length: 25
            estimated_program_length: 39.51
            purity_ratio: 1.58
            vocabulary: 14
            volume: 95.184
            difficulty: 4.667
            level: 0.214
            effort: 444.191
            time: 24.677
            bugs: 0.019
          loc:
            sloc: 4
            ploc: 4
            lloc: 0
            cloc: 0
            blank: 0
            sloc_average: 4
            ploc_average: 4
            lloc_average: 0
            cloc_average: 0
            blank_average: 0
            sloc_min: 4
            sloc_max: 4
            cloc_min: 0
            cloc_max: 0
            ploc_min: 4
            ploc_max: 4
            lloc_min: 0
            lloc_max: 0
            blank_min: 0
            blank_max: 0
          nom:
            functions: 0
            closures: 0
            functions_average: 0
            closures_average: 0
            total: 0
            average: 0
            functions_min: 0
            functions_max: 0
            closures_min: 0
            closures_max: 0
          tokens:
            tokens: 32
            average: 32
            min: 32
            max: 32
          mi:
            original: 124.622
            sei: 104.192
            visual_studio: 72.878
          abc:
            assignments: 0
            branches: 2
            conditions: 0
            magnitude: 2
            value: 2
            assignments_average: 0
            branches_average: 2
            conditions_average: 0
            assignments_min: 0
            assignments_max: 0
            branches_min: 2
            branches_max: 2
            conditions_min: 0
            conditions_max: 0
          wmc:
            class_wmc_sum: 0
            interface_wmc_sum: 0
            total: 0
          npm:
            class_npm_sum: 0
            interface_npm_sum: 0
            class_methods: 0
            interface_methods: 0
            class_coa: 0
            interface_coa: 0
            total: 0
            total_methods: 0
            coa: 0
          npa:
            class_npa_sum: 2
            interface_npa_sum: 0
            class_attributes: 2
            interface_attributes: 0
            class_cda: 1
            interface_cda: 0
            total: 2
            total_attributes: 2
            cda: 1
    metrics:
      nargs:
        function_args: 2
        closure_args: 1
        function_args_average: 2
        closure_args_average: 1
        total: 3
        value: 3
        average: 1.5
        function_args_min: 0
        function_args_max: 2
        closure_args_min: 0
        closure_args_max: 1
      nexits:
        sum: 3
        average: 1.5
        min: 0
        max: 3
      cognitive:
        sum: 5
        value: 5
        average: 2.5
        min: 0
        max: 5
      cyclomatic:
        sum: 5
        value: 4
        average: 5
        min: 1
        max: 4
        modified:
          sum: 5
          value: 4
          average: 5
          min: 1
          max: 4
      halstead:
        unique_operators: 24
        total_operators: 178
        unique_operands: 50
        total_operands: 117
        length: 295
        estimated_program_length: 392.232
        purity_ratio: 1.33
        vocabulary: 74
        volume: 1831.789
        difficulty: 28.08
        level: 0.036
        effort: 51436.628
        time: 2857.59
        bugs: 0.461
      loc:
        sloc: 50
        ploc: 38
        lloc: 23
        cloc: 5
        blank: 8
        sloc_average: 25
        ploc_average: 19
        lloc_average: 11.5
        cloc_average: 2.5
        blank_average: 4
        sloc_min: 4
        sloc_max: 50
        cloc_min: 0
        cloc_max: 5
        ploc_min: 4
        ploc_max: 38
        lloc_min: 0
        lloc_max: 23
        blank_min: 0
        blank_max: 8
      nom:
        functions: 1
        closures: 1
        functions_average: 0.5
        closures_average: 0.5
        total: 2
        average: 1
        functions_min: 0
        functions_max: 1
        closures_min: 0
        closures_max: 1
      tokens:
        tokens: 364
        average: 182
        min: 32
        max: 332
      mi:
        original: 67.407
        sei: -27.076
        visual_studio: 39.42
      abc:
        assignments: 13
        branches: 15
        conditions: 3
        magnitude: 20.075
        value: 18.628
        assignments_average: 6.5
        branches_average: 7.5
        conditions_average: 1.5
        assignments_min: 0
        assignments_max: 13
        branches_min: 2
        branches_max: 13
        conditions_min: 0
        conditions_max: 3
metrics:
  nargs:
    function_args: 2
    closure_args: 1
    function_args_average: 2
    closure_args_average: 1
    total: 3
    value: 0
    average: 1.5
    function_args_min: 0
    function_args_max: 2
    closure_args_min: 0
    closure_args_max: 1
  nexits:
    sum: 3
    average: 1.5
    min: 0
    max: 3
  cognitive:
    sum: 5
    value: 0
    average: 2.5
    min: 0
    max: 5
  cyclomatic:
    sum: 6
    value: 1
    average: 6
    min: 1
    max: 4
    modified:
      sum: 6
      value: 1
      average: 6
      min: 1
      max: 4
  halstead:
    unique_operators: 25
    total_operators: 181
    unique_operands: 54
    total_operands: 122
    length: 303
    estimated_program_length: 426.86
    purity_ratio: 1.409
    vocabulary: 79
    volume: 1910.046
    difficulty: 28.241
    level: 0.035
    effort: 53941.102
    time: 2996.728
    bugs: 0.476
  loc:
    sloc: 65
    ploc: 49
    lloc: 23
    cloc: 6
    blank: 12
    sloc_average: 21.667
    ploc_average: 16.333
    lloc_average: 7.667
    cloc_average: 2
    blank_average: 4
    sloc_min: 4
    sloc_max: 65
    cloc_min: 0
    cloc_max: 6
    ploc_min: 4
    ploc_max: 49
    lloc_min: 0
    lloc_max: 23
    blank_min: 0
    blank_max: 12
  nom:
    functions: 1
    closures: 1
    functions_average: 0.333
    closures_average: 0.333
    total: 2
    average: 0.667
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 1
  tokens:
    tokens: 393
    average: 131
    min: 29
    max: 332
  mi:
    original: 62.71
    sei: -34.618
    visual_studio: 36.672
  abc:
    assignments: 13
    branches: 15
    conditions: 3
    magnitude: 20.075
    value: 0
    assignments_average: 4.333
    branches_average: 5
    conditions_average: 1
    assignments_min: 0
    assignments_max: 13
    branches_min: 0
    branches_max: 13
    conditions_min: 0
    conditions_max: 3
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 2
    interface_npa_sum: 0
    class_attributes: 2
    interface_attributes: 0
    class_cda: 1
    interface_cda: 0
    total: 2
    total_attributes: 2
    cda: 1
