snapshots/DeepSpeech/native_client/workspace_status.h.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 9
kind: unit
spaces: []
metrics:
  nargs:
    function_args: 0
    closure_args: 0
    function_args_average: 0
    closure_args_average: 0
    total: 0
    value: 0
    average: 0
    function_args_min: 0
    function_args_max: 0
    closure_args_min: 0
    closure_args_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    value: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 1
    value: 1
    average: 1
    min: 1
    max: 1
    modified:
      sum: 1
      value: 1
      average: 1
      min: 1
      max: 1
  halstead:
    unique_operators: 5
    total_operators: 15
    unique_operands: 5
    total_operands: 6
    length: 21
    estimated_program_length: 23.219
    purity_ratio: 1.106
    vocabulary: 10
    volume: 69.76
    difficulty: 3
    level: 0.333
    effort: 209.281
    time: 11.627
    bugs: 0.012
  loc:
    sloc: 9
    ploc: 7
    lloc: 4
    cloc: 1
    blank: 2
    sloc_average: 9
    ploc_average: 7
    lloc_average: 4
    cloc_average: 1
    blank_average: 2
    sloc_min: 9
    sloc_max: 9
    cloc_min: 1
    cloc_max: 1
    ploc_min: 7
    ploc_max: 7
    lloc_min: 4
    lloc_max: 4
    blank_min: 2
    blank_max: 2
  nom:
    functions: 0
    closures: 0
    functions_average: 0
    closures_average: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  tokens:
    tokens: 32
    average: 32
    min: 32
    max: 32
  mi:
    original: 113.101
    sei: 42.583
    visual_studio: 66.141
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    value: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
  wmc:
    class_wmc_sum: 0
    interface_wmc_sum: 0
    total: 0
  npm:
    class_npm_sum: 0
    interface_npm_sum: 0
    class_methods: 0
    interface_methods: 0
    class_coa: 0
    interface_coa: 0
    total: 0
    total_methods: 0
    coa: 0
  npa:
    class_npa_sum: 0
    interface_npa_sum: 0
    class_attributes: 0
    interface_attributes: 0
    class_cda: 0
    interface_cda: 0
    total: 0
    total_attributes: 0
    cda: 0
